Created main.js & Auth instance for authentication management

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="message"></div>
     <div class="container">
       <header>
-        <h1>Firebase3: Authenticatión</h1>
+        <h1>Firebase3: Authentication</h1>
         <nav>
           <a href="registro-usuarios.html">Registrarse</a> |
           <a href="baja.html">Baja de usuario</a> |
@@ -55,5 +55,6 @@
     <script src="js/database.js"></script>
     <script src="js/auth.js"></script>
     <script src="js/oauth-providers.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
