--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 
 
     <script src="../node_modules/firebase/firebase.js"></script>
+    <script src="js/render.js"></script>
     <script src="js/firebase.js"></script>
     <script src="js/database.js"></script>
     <script src="js/auth.js"></script>
