--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <script src="js/firebase.js"></script>
     <script src="js/database.js"></script>
     <script src="js/auth.js"></script>
-    <script src="js/oauth-providers.js"></script>
+    <script src="js/auth-providers.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
